--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/Accommodo
-spring.datasource.username = postgres
-spring.datasource.password = euamocpps1
+spring.datasource.url=jdbc:postgresql://postgres:njDhz6z7CPHDWdT5bqOv@containers-us-west-166.railway.app:7054/railway
+spring.datasource.username = db_username
+spring.datasource.password = db_password
 spring.datasource.driver-class-name=org.postgresql.Driver
