--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=jdbc:${DATABASE_URL}
 spring.datasource.username = ${PGPASSWORD}
 spring.datasource.password = ${PGUSER}
 spring.datasource.driver-class-name=org.postgresql.Driver
